--- a/public/css/inicio.css
+++ b/public/css/inicio.css
@@ -1,27 +1,34 @@
 body{
-    background-image: url('https://images.pexels.com/photos/9137/night-vintage-music-bokeh.jpg?auto=compress&cs=tinysrgb&h=750&w=1260');
+    background-image: url('https://images.pexels.com/photos/1791/vintage-music-white-sound.jpg?auto=compress&cs=tinysrgb&h=750&w=1260');
     background-size: cover;
-}
-h1{
-    color: yellow;
-    font-size: 60px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-.button {
-    background-color: rgb(238, 104, 14);
-    border: none;
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
-    padding: 15px 35px;
-    text-decoration: none;
-    display: inline-block;
-    margin: 4px 2px;
-    cursor: pointer;
 }
 .center {
     margin: auto;
-    width: 50%;
+    width: 100%;
     padding: 10px;
     text-align: center;
+}
+
+h1{
+    color: #000066;
+    font-size: 60px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.button {
+    background-color: #b3b3ff;
+    border: none;
+    color:#000066;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    padding: 5% 8%;
+    text-decoration: none;
+    display: inline-block;
+    margin: 8% 5%;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+.btn:hover{
+    background-color:  #000033;
+    color: white;
 }
