--- a/public/css/discos_cantantes.css
+++ b/public/css/discos_cantantes.css
@@ -29,6 +29,7 @@ table, th, td {
 }
 .editar_eliminar{
     border: none;
+    padding: 5px;
 }
 .btn-home{
     border: none;
@@ -84,4 +85,14 @@ input{
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
+}
+.error-no-discos{
+    border: 4px solid red;
+    border-radius: 25px;
+    background-color: rgb(245, 175, 175);
+    padding: 5%;
+    color: red;
+    font-weight: bold;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
 }
